--- a/recipes/LibriSpeech/ASR/transformer/hparams/conformer_samuele_v2_decode.yaml
+++ b/recipes/LibriSpeech/ASR/transformer/hparams/conformer_samuele_v2_decode.yaml
@@ -101,7 +101,7 @@ valid_search_interval: 10
 valid_beam_size: 10
 test_beam_size: 70
 lm_weight: 0.60
-ctc_weight_decode: 0.30
+ctc_weight_decode: 0.40
 
 ############################## models ################################
 
@@ -201,7 +201,7 @@ test_search: !new:speechbrain.decoders.S2STransformerBeamSearch
     temperature: 1.15
     temperature_lm: 1.15
     using_eos_threshold: False
-    length_normalization: False
+    length_normalization: True
 
 log_softmax: !new:torch.nn.LogSoftmax
     dim: -1
