--- a/recipes/TIMIT/ASR/CTC/hparams/train.yaml
+++ b/recipes/TIMIT/ASR/CTC/hparams/train.yaml
@@ -51,12 +51,15 @@ blank_index: 0
 # Dataloader options
 train_dataloader_opts:
     batch_size: !ref <batch_size>
+    num_workers: 4
 
 valid_dataloader_opts:
     batch_size: !ref <batch_size>
+    num_workers: 4
 
 test_dataloader_opts:
     batch_size: !ref <batch_size>
+    num_workers: 4
 
 normalize: !new:speechbrain.processing.features.InputNormalization
     norm_type: global
