--- a/recipes/LibriSpeech/ASR/transformer/hparams/transformer.yaml
+++ b/recipes/LibriSpeech/ASR/transformer/hparams/transformer.yaml
@@ -68,7 +68,7 @@ n_mels: 80
 train_dataloader_opts:
     batch_size: !ref <batch_size>
     shuffle: True
-    num_workers: !ref <num_workers>
+    #num_workers: !ref <num_workers>
 
 valid_dataloader_opts:
     batch_size: 1
