--- a/recipes/LibriSpeech/ASR/transformer/hparams/conformer_espnet.yaml
+++ b/recipes/LibriSpeech/ASR/transformer/hparams/conformer_espnet.yaml
@@ -76,11 +76,11 @@ test_dataloader_opts:
 
 ####################### Model parameters ###########################
 # Transformer
-d_model: 144
-nhead: 4
+d_model: 512
+nhead: 8
 num_encoder_layers: 12
-num_decoder_layers: 4
-d_ffn: 1024
+num_decoder_layers: 6
+d_ffn: 2048
 transformer_dropout: 0.0
 activation: !name:torch.nn.GELU
 output_neurons: 5000
@@ -107,15 +107,15 @@ ctc_weight_decode: 0.40
 
 CNN: !new:speechbrain.lobes.models.convolution.ConvolutionFrontEnd
     input_shape: (8, 10, 80)
-    num_blocks: 2
+    num_blocks: 3
     num_layers_per_block: 1
-    out_channels: (64, 32)
-    kernel_sizes: (3, 3)
-    strides: (2, 2)
-    residuals: (False, False)
+    out_channels: (128, 200, 256)
+    kernel_sizes: (3, 3, 1)
+    strides: (2, 2, 1)
+    residuals: (False, False, False)
 
 Transformer: !new:speechbrain.lobes.models.transformer.TransformerASR.TransformerASR # yamllint disable-line rule:line-length
-    input_size: 640
+    input_size: 5120
     tgt_vocab: !ref <output_neurons>
     d_model: !ref <d_model>
     nhead: !ref <nhead>
