--- a/recipes/CommonVoice/ASR/CTC/hparams/train_en_with_wav2vec.yaml
+++ b/recipes/CommonVoice/ASR/CTC/hparams/train_en_with_wav2vec.yaml
@@ -54,14 +54,12 @@ test_dataloader_options:
     num_workers: 6
 
 # BPE parameters
-token_type: unigram  # ["unigram", "bpe", "char"]
+token_type: char  # ["unigram", "bpe", "char"]
 character_coverage: 1.0
 
 # Model parameters
 activation: !name:torch.nn.LeakyReLU
-dnn_layers: 3
 dnn_neurons: 1024
-emb_size: 128
 freeze_wav2vec: False
 dropout: 0.15
 
