--- a/recipes/CommonVoice/ASR/CTC/hparams/train_en_with_wav2vec.yaml
+++ b/recipes/CommonVoice/ASR/CTC/hparams/train_en_with_wav2vec.yaml
@@ -33,7 +33,7 @@ avoid_if_longer_than: 10.0
 
 # Training parameters
 number_of_epochs: 20
-lr: 0.0001
+lr: 1.0
 lr_wav2vec: 0.0001
 sorting: ascending
 auto_mix_prec: False
@@ -141,10 +141,10 @@ modules:
 model: !new:torch.nn.ModuleList
     - [!ref <enc>, !ref <ctc_lin>]
 
-model_opt_class: !name:torch.optim.Adam
+model_opt_class: !name:torch.optim.Adadelta
     lr: !ref <lr>
-    #rho: 0.95
-    #eps: 1.e-8
+    rho: 0.95
+    eps: 1.e-8
 
 wav2vec_opt_class: !name:torch.optim.Adam
     lr: !ref <lr_wav2vec>
