remove 1s long segments

--- a/recipes/CommonVoice/ASR/CTC/hparams/train_en_with_wav2vec.yaml
+++ b/recipes/CommonVoice/ASR/CTC/hparams/train_en_with_wav2vec.yaml
@@ -30,6 +30,7 @@ skip_prep: False # Skip data preparation
 # We remove utterance slonger than 10s in the train/dev/test sets as
 # longer sentences certainly correspond to "open microphones".
 avoid_if_longer_than: 10.0
+avoid_if_shorter_than: 1.0
 
 # Training parameters
 number_of_epochs: 20
