--- a/recipes/CommonVoice/ASR/CTC/hparams/train_en_with_wav2vec.yaml
+++ b/recipes/CommonVoice/ASR/CTC/hparams/train_en_with_wav2vec.yaml
@@ -34,8 +34,8 @@ avoid_if_shorter_than: 1.0
 
 # Training parameters
 number_of_epochs: 20
-lr: 0.01
-lr_wav2vec: 0.00005
+lr: 1.0
+lr_wav2vec: 0.0001
 gradient_clipping: 5.0
 sorting: ascending
 auto_mix_prec: False
@@ -61,7 +61,7 @@ character_coverage: 1.0
 
 # Model parameters
 activation: !name:torch.nn.LeakyReLU
-dnn_neurons: 128
+dnn_neurons: 1024
 freeze_wav2vec: False
 dropout: 0.15
 
@@ -81,11 +81,27 @@ augmentation: !new:speechbrain.lobes.augment.TimeDomainSpecAugment
     sample_rate: !ref <sample_rate>
     speeds: [95, 100, 105]
 
-enc: !new:speechbrain.lobes.models.VanillaNN.VanillaNN
+enc: !new:speechbrain.nnet.containers.Sequential
     input_shape: [null, null, 1024]
-    activation: !ref <activation>
-    dnn_blocks: 2
-    dnn_neurons: !ref <dnn_neurons>
+    linear1: !name:speechbrain.nnet.linear.Linear
+        n_neurons: !ref <dnn_neurons>
+        bias: True
+    bn1: !name:speechbrain.nnet.normalization.BatchNorm1d
+    activation: !new:torch.nn.LeakyReLU
+    drop: !new:torch.nn.Dropout
+        p: 0.15
+    linear2: !name:speechbrain.nnet.linear.Linear
+        n_neurons: !ref <dnn_neurons>
+        bias: True
+    bn2: !name:speechbrain.nnet.normalization.BatchNorm1d
+    activation2: !new:torch.nn.LeakyReLU
+    drop2: !new:torch.nn.Dropout
+        p: 0.15
+    linear3: !name:speechbrain.nnet.linear.Linear
+        n_neurons: !ref <dnn_neurons>
+        bias: True
+    bn3: !name:speechbrain.nnet.normalization.BatchNorm1d
+    activation3: !new:torch.nn.LeakyReLU
 
 wav2vec2: !new:speechbrain.lobes.models.huggingface_wav2vec.HuggingFaceWav2Vec2
     source: !ref <wav2vec2_hub>
