--- a/recipes/LibriSpeech/ASR/ctc/hparams/train_with_wav2vec_salah.yaml
+++ b/recipes/LibriSpeech/ASR/ctc/hparams/train_with_wav2vec_salah.yaml
@@ -62,6 +62,7 @@ test_dataloader_opts:
 activation: !name:torch.nn.LeakyReLU
 rnn_layers: 2
 rnn_neurons: 1024
+is_rnn: True
 freeze_wav2vec: False
 
 # Outputs
