--- a/recipes/LibriSpeech/ASR/ctc/hparams/train_with_wav2vec_salah_with_SB.yaml
+++ b/recipes/LibriSpeech/ASR/ctc/hparams/train_with_wav2vec_salah_with_SB.yaml
@@ -104,10 +104,10 @@ wav2vec2: !new:speechbrain.lobes.models.huggingface_wav2vec.HuggingFaceWav2Vec2
    pretrain: !ref <pretrain>
    save_path: !ref <save_folder>/wav2vec2_checkpoint
 
-wav2vec2_trans: !new:speechbrain.lobes.models.huggingface_wav2vec.HuggingFaceWav2Vec2ForPretrain
-   source: !ref <wav2vec2_hub>
-   pretrain: !ref <pretrain>
-   save_path: !ref <save_folder>/wav2vec2_checkpoint
+#wav2vec2_trans: !new:speechbrain.lobes.models.huggingface_wav2vec.HuggingFaceWav2Vec2ForPretrain
+#   source: !ref <wav2vec2_hub>
+#   pretrain: !ref <pretrain>
+#   save_path: !ref <save_folder>/wav2vec2_checkpoint
 
 #####
 # Uncomment this block if you prefer to use a Fairseq pretrained model instead
@@ -173,7 +173,7 @@ checkpointer: !new:speechbrain.utils.checkpoints.Checkpointer
 pretrainer: !new:speechbrain.utils.parameter_transfer.Pretrainer
    collect_in: !ref <save_folder>
    loadables:
-      wav2vec2_trans: !ref <wav2vec2_trans>
+      wav2vec2_trans: !ref <wav2vec2>
    paths:
       wav2vec2_trans: !ref <pretrain_path>/wav2vec2.ckpt
 
