--- a/recipes/LibriSpeech/ASR/ctc/hparams/train_with_wav2vec_salah_with_SB.yaml
+++ b/recipes/LibriSpeech/ASR/ctc/hparams/train_with_wav2vec_salah_with_SB.yaml
@@ -173,9 +173,9 @@ checkpointer: !new:speechbrain.utils.checkpoints.Checkpointer
 pretrainer: !new:speechbrain.utils.parameter_transfer.Pretrainer
    collect_in: !ref <save_folder>
    loadables:
-      wav2vec2_trans: !ref <wav2vec2>
+      wav2vec2: !ref <wav2vec2>
    paths:
-      wav2vec2_trans: !ref <pretrain_path>/wav2vec2_converted.ckpt
+      wav2vec2: !ref <pretrain_path>/wav2vec2_converted.ckpt
 
 train_logger: !new:speechbrain.utils.train_logger.FileTrainLogger
    save_file: !ref <train_log>
