--- a/recipes/LibriSpeech/ASR/ctc/hparams/train_with_wav2vec_salah_with_SB.yaml
+++ b/recipes/LibriSpeech/ASR/ctc/hparams/train_with_wav2vec_salah_with_SB.yaml
@@ -143,10 +143,8 @@ modules:
 model: !new:torch.nn.ModuleList
    - [!ref <enc>, !ref <ctc_lin>]
 
-model_opt_class: !name:torch.optim.Adadelta
-   lr: !ref <lr>
-   rho: 0.95
-   eps: 1.e-8
+model_opt_class: !name:torch.optim.AdamW
+   lr: 0.001
 
 wav2vec_opt_class: !name:torch.optim.Adam
    lr: !ref <lr_wav2vec>
