--- a/recipes/LibriSpeech/ASR/ctc/hparams/train_with_wav2vec_salah_with_SB_ligru.yaml
+++ b/recipes/LibriSpeech/ASR/ctc/hparams/train_with_wav2vec_salah_with_SB_ligru.yaml
@@ -94,7 +94,7 @@ epoch_counter: !new:speechbrain.utils.epoch_loop.EpochCounter
 
 enc: !new:speechbrain.nnet.RNN.LiGRU
    input_shape: [null, null, 768]
-   non_linearity: leaky_relu
+   nonlinearity: leaky_relu
    num_layers: !ref <rnn_layers>
    hidden_size: !ref <rnn_neurons>
    dropout: !ref <dropout>
