--- a/recipes/LibriSpeech/ASR/ctc/hparams/train_with_wav2vec_salah_with_SB.yaml
+++ b/recipes/LibriSpeech/ASR/ctc/hparams/train_with_wav2vec_salah_with_SB.yaml
@@ -41,6 +41,7 @@ sorting: ascending
 auto_mix_prec: False
 sample_rate: 16000
 pretrain: False
+patience: 0
 
 
 # With data_parallel batch_size is split into N jobs
@@ -155,7 +156,7 @@ lr_annealing_model: !new:speechbrain.nnet.schedulers.NewBobScheduler
    initial_value: !ref <lr>
    improvement_threshold: 0.0025
    annealing_factor: 0.8
-   patient: 0
+   patient: !ref <patience>
 
 lr_annealing_wav2vec: !new:speechbrain.nnet.schedulers.NewBobScheduler
    initial_value: !ref <lr_wav2vec>
