--- a/recipes/LibriSpeech/ASR/ctc/hparams/train_with_wav2vec_salah.yaml
+++ b/recipes/LibriSpeech/ASR/ctc/hparams/train_with_wav2vec_salah.yaml
@@ -13,8 +13,9 @@ save_folder: !ref <output_folder>/save
 train_log: !ref <output_folder>/train_log.txt
 
 # URL for the biggest Fairseq english wav2vec2 model.
-wav2vec2_hub: /gpfswork/rech/kxg/uyk21ll/datasets/huggingface_hub/commonvoice_base_32GPUs/checkpoint_best.pt
-
+wav2vec2_hub: /gpfswork/rech/kxg/uyk21ll/datasets/huggingface_hub/wav2vec2-base
+#wav2vec2_hub: /gpfswork/rech/kxg/uyk21ll/datasets/huggingface_hub/wav2vec2-CV-fairseq-to-SB
+pretrain_path: /gpfswork/rech/kxg/uyk21ll/workspace/speechbrain/sp_ssl/speechbrain/results/wav2vec2_cv_4_multinode/save/157k_steps/
 # Data files
 data_folder: !PLACEHOLDER # e,g./path/to/LibriSpeech
 # noise/ris dataset will automatically be downloaded
@@ -32,13 +33,15 @@ test_csv:
 
 # Training parameters
 number_of_epochs: 30
-lr: 1.0
+lr: 0.0005
+weight_decay: 0.01
 dropout: 0.1
 lr_wav2vec: 0.0001
 sorting: ascending
 auto_mix_prec: False
 sample_rate: 16000
-pretrain: True
+pretrain: False
+patience: 0
 
 
 # With data_parallel batch_size is split into N jobs
@@ -78,6 +81,10 @@ eos_index: 2
 #
 # Functions and classes
 #
+
+normalize: !new:speechbrain.processing.features.InputNormalization
+   norm_type: sentence
+
 epoch_counter: !new:speechbrain.utils.epoch_loop.EpochCounter
    limit: !ref <number_of_epochs>
 
@@ -95,10 +102,16 @@ enc: !new:speechbrain.nnet.RNN.LSTM
    re_init: True
    bidirectional: True
 
-#wav2vec2: !new:speechbrain.lobes.models.huggingface_wav2vec.HuggingFaceWav2Vec2
+wav2vec2: !new:speechbrain.lobes.models.huggingface_wav2vec.HuggingFaceWav2Vec2
+   source: !ref <wav2vec2_hub>
+   output_norm: False
+   freeze: !ref <freeze_wav2vec>
+   pretrain: !ref <pretrain>
+   save_path: !ref <save_folder>/wav2vec2_checkpoint
+
+#wav2vec2_trans: !new:speechbrain.lobes.models.huggingface_wav2vec.HuggingFaceWav2Vec2ForPretrain
 #   source: !ref <wav2vec2_hub>
-#   output_norm: True
-#   freeze: !ref <freeze_wav2vec>
+#   pretrain: !ref <pretrain>
 #   save_path: !ref <save_folder>/wav2vec2_checkpoint
 
 #####
@@ -106,12 +119,12 @@ enc: !new:speechbrain.nnet.RNN.LSTM
 # of a HuggingFace one. Here, we provide an URL that is obtained from the
 # Fairseq github for the multilingual XLSR.
 #
-wav2vec2: !new:speechbrain.lobes.models.fairseq_wav2vec.FairseqWav2Vec2
-   pretrained_path: !ref <wav2vec2_hub>
-   output_norm: False
-   pretrain: !ref <pretrain>
-   freeze: !ref <freeze_wav2vec>
-   save_path: !ref <save_folder>/wav2vec2_checkpoint/model.pt
+#wav2vec2: !new:speechbrain.lobes.models.fairseq_wav2vec.FairseqWav2Vec2
+#   pretrained_path: !ref <wav2vec2_hub>
+#   output_norm: True
+#   pretrain: !ref <pretrain>
+#   freeze: !ref <freeze_wav2vec>
+#   save_path: !ref <save_folder>/wav2vec2_checkpoint/model.pt
 
 ctc_lin: !new:speechbrain.nnet.linear.Linear
    input_size: 2048
@@ -127,14 +140,14 @@ modules:
    wav2vec2: !ref <wav2vec2>
    enc: !ref <enc>
    ctc_lin: !ref <ctc_lin>
+   normalize: !ref <normalize>
 
 model: !new:torch.nn.ModuleList
    - [!ref <enc>, !ref <ctc_lin>]
 
-model_opt_class: !name:torch.optim.Adadelta
+model_opt_class: !name:torch.optim.AdamW
    lr: !ref <lr>
-   rho: 0.95
-   eps: 1.e-8
+   weight_decay: !ref <weight_decay>
 
 wav2vec_opt_class: !name:torch.optim.Adam
    lr: !ref <lr_wav2vec>
@@ -143,7 +156,7 @@ lr_annealing_model: !new:speechbrain.nnet.schedulers.NewBobScheduler
    initial_value: !ref <lr>
    improvement_threshold: 0.0025
    annealing_factor: 0.8
-   patient: 0
+   patient: !ref <patience>
 
 lr_annealing_wav2vec: !new:speechbrain.nnet.schedulers.NewBobScheduler
    initial_value: !ref <lr_wav2vec>
@@ -160,6 +173,14 @@ checkpointer: !new:speechbrain.utils.checkpoints.Checkpointer
       scheduler_model: !ref <lr_annealing_model>
       scheduler_wav2vec: !ref <lr_annealing_wav2vec>
       counter: !ref <epoch_counter>
+
+# Used to load the SB checkpoint of w2v2
+pretrainer: !new:speechbrain.utils.parameter_transfer.Pretrainer
+   collect_in: !ref <save_folder>
+   loadables:
+      wav2vec2: !ref <wav2vec2>
+   paths:
+      wav2vec2: !ref <pretrain_path>/wav2vec2_converted.ckpt
 
 train_logger: !new:speechbrain.utils.train_logger.FileTrainLogger
    save_file: !ref <train_log>
