--- a/recipes/LibriSpeech/ASR/ctc/hparams/train_with_wav2vec_salah_finetune.yaml
+++ b/recipes/LibriSpeech/ASR/ctc/hparams/train_with_wav2vec_salah_finetune.yaml
@@ -13,8 +13,9 @@ save_folder: !ref <output_folder>/save
 train_log: !ref <output_folder>/train_log.txt
 
 # URL for the biggest Fairseq english wav2vec2 model.
-wav2vec2_hub: /gpfswork/rech/kxg/uyk21ll/datasets/huggingface_hub/commonvoice_base_32GPUs/checkpoint_best.pt
-
+wav2vec2_hub: /gpfswork/rech/kxg/uyk21ll/datasets/huggingface_hub/wav2vec2-base
+#wav2vec2_hub: /gpfswork/rech/kxg/uyk21ll/datasets/huggingface_hub/wav2vec2-CV-fairseq-to-SB
+pretrain_path: /gpfswork/rech/kxg/uyk21ll/workspace/speechbrain/sp_ssl/speechbrain/results/wav2vec2_cv_4_multinode/save/157k_steps/
 # Data files
 data_folder: !PLACEHOLDER # e,g./path/to/LibriSpeech
 # noise/ris dataset will automatically be downloaded
@@ -32,18 +33,22 @@ test_csv:
 
 # Training parameters
 number_of_epochs: 30
-lr: 1.0
+lr: 0.0005
+weight_decay: 0.01
+dropout: 0.1
 lr_wav2vec: 0.0001
 sorting: ascending
 auto_mix_prec: False
 sample_rate: 16000
+pretrain: False
+patience: 0
 
 
 # With data_parallel batch_size is split into N jobs
 # With DDP batch_size is multiplied by N jobs
 # Must be 3 per GPU to fit 32GB of VRAM
 batch_size: 6
-test_batch_size: 8
+test_batch_size: 1
 
 # Dataloader options
 train_dataloader_opts:
@@ -60,9 +65,9 @@ test_dataloader_opts:
 
 # Model parameters
 activation: !name:torch.nn.LeakyReLU
-dnn_layers: 2
-dnn_neurons: 1024
-isrnn: False
+rnn_layers: 2
+rnn_neurons: 1024
+isrnn: True
 freeze_wav2vec: False
 
 # Outputs
@@ -76,12 +81,12 @@ eos_index: 2
 #
 # Functions and classes
 #
+
+normalize: !new:speechbrain.processing.features.InputNormalization
+   norm_type: sentence
+
 epoch_counter: !new:speechbrain.utils.epoch_loop.EpochCounter
    limit: !ref <number_of_epochs>
-
-augmentation: !new:speechbrain.lobes.augment.TimeDomainSpecAugment
-   sample_rate: !ref <sample_rate>
-   speeds: [95, 100, 105]
 
 #enc: !new:speechbrain.lobes.models.VanillaNN.VanillaNN
 #   input_shape: [null, null, 768]
@@ -89,16 +94,24 @@ augmentation: !new:speechbrain.lobes.augment.TimeDomainSpecAugment
 #   dnn_blocks: !ref <dnn_layers>
 #   dnn_neurons: !ref <dnn_neurons>
 
-enc: !new:speechbrain.lobes.models.VanillaNN.VanillaNN
+enc: !new:speechbrain.nnet.RNN.LSTM
    input_shape: [null, null, 768]
-   activation: !ref <activation>
-   dnn_blocks: !ref <dnn_layers>
-   dnn_neurons: !ref <dnn_neurons>
+   num_layers: !ref <rnn_layers>
+   hidden_size: !ref <rnn_neurons>
+   dropout: !ref <dropout>
+   re_init: True
+   bidirectional: True
 
-#wav2vec2: !new:speechbrain.lobes.models.huggingface_wav2vec.HuggingFaceWav2Vec2
+wav2vec2: !new:speechbrain.lobes.models.huggingface_wav2vec.HuggingFaceWav2Vec2
+   source: !ref <wav2vec2_hub>
+   output_norm: False
+   freeze: !ref <freeze_wav2vec>
+   pretrain: !ref <pretrain>
+   save_path: !ref <save_folder>/wav2vec2_checkpoint
+
+#wav2vec2_trans: !new:speechbrain.lobes.models.huggingface_wav2vec.HuggingFaceWav2Vec2ForPretrain
 #   source: !ref <wav2vec2_hub>
-#   output_norm: True
-#   freeze: !ref <freeze_wav2vec>
+#   pretrain: !ref <pretrain>
 #   save_path: !ref <save_folder>/wav2vec2_checkpoint
 
 #####
@@ -106,14 +119,15 @@ enc: !new:speechbrain.lobes.models.VanillaNN.VanillaNN
 # of a HuggingFace one. Here, we provide an URL that is obtained from the
 # Fairseq github for the multilingual XLSR.
 #
-wav2vec2: !new:speechbrain.lobes.models.fairseq_wav2vec.FairseqWav2Vec2
-   pretrained_path: !ref <wav2vec2_hub>
-   output_norm: True
-   freeze: !ref <freeze_wav2vec>
-   save_path: !ref <save_folder>/wav2vec2_checkpoint/model.pt
+#wav2vec2: !new:speechbrain.lobes.models.fairseq_wav2vec.FairseqWav2Vec2
+#   pretrained_path: !ref <wav2vec2_hub>
+#   output_norm: True
+#   pretrain: !ref <pretrain>
+#   freeze: !ref <freeze_wav2vec>
+#   save_path: !ref <save_folder>/wav2vec2_checkpoint/model.pt
 
 ctc_lin: !new:speechbrain.nnet.linear.Linear
-   input_size: !ref <dnn_neurons>
+   input_size: 2048
    n_neurons: !ref <output_neurons>
 
 log_softmax: !new:speechbrain.nnet.activations.Softmax
@@ -126,23 +140,24 @@ modules:
    wav2vec2: !ref <wav2vec2>
    enc: !ref <enc>
    ctc_lin: !ref <ctc_lin>
+   normalize: !ref <normalize>
 
 model: !new:torch.nn.ModuleList
    - [!ref <enc>, !ref <ctc_lin>]
 
-model_opt_class: !name:torch.optim.Adadelta
+model_opt_class: !name:torch.optim.AdamW
    lr: !ref <lr>
-   rho: 0.95
-   eps: 1.e-8
+   weight_decay: !ref <weight_decay>
 
-wav2vec_opt_class: !name:torch.optim.Adam
+wav2vec_opt_class: !name:torch.optim.AdamW
    lr: !ref <lr_wav2vec>
+   weight_decay: !ref <weight_decay>
 
 lr_annealing_model: !new:speechbrain.nnet.schedulers.NewBobScheduler
    initial_value: !ref <lr>
    improvement_threshold: 0.0025
    annealing_factor: 0.8
-   patient: 0
+   patient: !ref <patience>
 
 lr_annealing_wav2vec: !new:speechbrain.nnet.schedulers.NewBobScheduler
    initial_value: !ref <lr_wav2vec>
@@ -159,6 +174,14 @@ checkpointer: !new:speechbrain.utils.checkpoints.Checkpointer
       scheduler_model: !ref <lr_annealing_model>
       scheduler_wav2vec: !ref <lr_annealing_wav2vec>
       counter: !ref <epoch_counter>
+
+# Used to load the SB checkpoint of w2v2
+pretrainer: !new:speechbrain.utils.parameter_transfer.Pretrainer
+   collect_in: !ref <save_folder>
+   loadables:
+      wav2vec2: !ref <wav2vec2>
+   paths:
+      wav2vec2: !ref <pretrain_path>/wav2vec2_converted.ckpt
 
 train_logger: !new:speechbrain.utils.train_logger.FileTrainLogger
    save_file: !ref <train_log>
