--- a/recipes/CommonVoice/ASR/CTC/hparams/train_en_with_wav2vec.yaml
+++ b/recipes/CommonVoice/ASR/CTC/hparams/train_en_with_wav2vec.yaml
@@ -33,7 +33,7 @@ avoid_if_longer_than: 10.0
 
 # Training parameters
 number_of_epochs: 30
-lr: 1.0
+lr: 0.0005
 lr_wav2vec: 0.0001
 sorting: ascending
 auto_mix_prec: False
@@ -54,7 +54,7 @@ test_dataloader_options:
     num_workers: 6
 
 # BPE parameters
-token_type: unigram  # ["unigram", "bpe", "char"]
+token_type: char  # ["unigram", "bpe", "char"]
 character_coverage: 1.0
 
 # Model parameters
@@ -65,7 +65,7 @@ freeze_wav2vec: False
 dropout: 0.15
 
 # Outputs
-output_neurons: 1000  # BPE size, index(blank/eos/bos) = 0
+output_neurons: 28  # BPE size, index(blank/eos/bos) = 0
 
 # Decoding parameters
 # Be sure that the bos and eos index match with the BPEs ones
@@ -142,12 +142,10 @@ modules:
 model: !new:torch.nn.ModuleList
     - [!ref <enc>, !ref <ctc_lin>]
 
-model_opt_class: !name:torch.optim.Adadelta
+model_opt_class: !name:torch.optim.AdamW
     lr: !ref <lr>
-    rho: 0.95
-    eps: 1.e-8
 
-wav2vec_opt_class: !name:torch.optim.Adam
+wav2vec_opt_class: !name:torch.optim.AdamW
     lr: !ref <lr_wav2vec>
 
 lr_annealing_model: !new:speechbrain.nnet.schedulers.NewBobScheduler
