--- a/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
+++ b/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
@@ -15,10 +15,8 @@ wav2vec2_hub: facebook/wav2vec2-base
 
 # Data files
 data_folder: !PLACEHOLDER  # e.g, /localscratch/cv-corpus-5.1-2020-06-22/fr
-train_tsv_file: !ref <data_folder>/train.csv # Standard CommonVoice .tsv files
-dev_tsv_file: !ref <data_folder>/valid.csv  # Standard CommonVoice .tsv files
-train_csv: !ref <save_folder>/train.csv
-valid_csv: !ref <save_folder>/dev.csv
+train_csv: !ref <data_folder>/train.csv
+valid_csv: !ref <data_folder>/valid.csv
 
 
 # We remove utterance slonger than 10s in the train/dev/test sets as
