--- a/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
+++ b/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
@@ -40,6 +40,15 @@ auto_mix_prec: True
 sample_rate: 16000
 ckpt_interval_minutes: 30 # save checkpoint every N min
 
+dynamic_batching: False
+# dynamic batching parameters, if used
+dynamic_batch_sampler:
+    feats_hop_size: 0.01
+    max_batch_len: 20000 # in terms of frames
+    shuffle_ex: True
+    batch_ordering: !ref <sorting>
+    num_buckets: 20
+
 # With data_parallel batch_size is split into N jobs
 # With DDP batch_size is multiplied by N jobs
 # Must be 12 per GPU to fit 32GB of VRAM
