--- a/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
+++ b/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
@@ -44,7 +44,7 @@ dynamic_batching: False
 # dynamic batching parameters, if used
 dynamic_batch_sampler:
     max_batch_len: 120 # in terms of frames
-    shuffle_ex: True
+    shuffle_ex: False
     batch_ordering: !ref <sorting>
     num_buckets: 50
 
