--- a/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
+++ b/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
@@ -43,7 +43,7 @@ auto_mix_prec: True
 sample_rate: 16000
 ckpt_interval_minutes: 30 # save checkpoint every N min
 
-dynamic_batching: False
+dynamic_batching: True
 dyn_batch_len: 90
 
 # dynamic batching parameters, if used
