--- a/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
+++ b/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
@@ -15,7 +15,7 @@ wav2vec2_hub: facebook/wav2vec2-base
 
 # Data files
 data_folder: !PLACEHOLDER  # e.g, /localscratch/cv-corpus-5.1-2020-06-22/fr
-train_csv: !ref <data_folder>/valid.csv
+train_csv: !ref <data_folder>/train.csv
 valid_csv: !ref <data_folder>/valid.csv
 
 use_tensorboard: True
