--- a/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
+++ b/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
@@ -39,7 +39,7 @@ lr_adam: 2.0 # This will get reduced by the training scheduler
 weight_decay: 0.01
 d_model: 1024  # Needed by the scheduler. 768 is for the BASE w2v2
 sorting: random
-auto_mix_prec: False
+auto_mix_prec: True
 sample_rate: 16000
 ckpt_interval_minutes: 30 # save checkpoint every N min
 
