--- a/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
+++ b/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
@@ -15,8 +15,8 @@ wav2vec2_hub: facebook/wav2vec2-base
 
 # Data files
 data_folder: !PLACEHOLDER  # e.g, /localscratch/cv-corpus-5.1-2020-06-22/fr
-train_csv: !ref <data_folder>/train_10s.csv
-valid_csv: !ref <data_folder>/valid_10s.csv
+train_csv: !ref <data_folder>/train_8s.csv
+valid_csv: !ref <data_folder>/valid.csv
 
 use_tensorboard: True
 tensorboard_logs: !ref <output_folder>/tensorboard_logs/
