--- a/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
+++ b/recipes/lebenchmark/self-supervised-learning/wav2vec2/hparams/wav2vec2_base_lebenchmark.yaml
@@ -112,3 +112,9 @@ train_logger: !new:speechbrain.utils.train_logger.FileTrainLogger
 # Tensorboard logger (optional)
 tensorboard_train_logger: !new:speechbrain.utils.train_logger.TensorboardLogger
     save_dir: !ref <tensorboard_logs>
+
+# This checkpointer makes the tensorboard logging resumable.
+tensorboard_checkpointer: !new:speechbrain.utils.checkpoints.Checkpointer
+    checkpoints_dir: !ref <tensorboard_logs>
+    recoverables:
+        tensorboard_logger: !ref <tensorboard_train_logger>
