--- a/recipes/CommonVoice/self-supervised-learning/hypermixer/hparams/hypermixer.yaml
+++ b/recipes/CommonVoice/self-supervised-learning/hypermixer/hparams/hypermixer.yaml
@@ -84,8 +84,13 @@ hypermixer: !new:speechbrain.lobes.models.HyperMixer.HyperMixer
     num_blocks: 4
     dropout_rate: 0.1
 
+lin: !new:speechbrain.lobes.models.VanillaNN
+    input_shape: [null, null, 256]
+    dnn_neurons: 80
+
 modules:
     hypermixer: !ref <hypermixer>
+    lin: !ref <lin>
 
 MSE_loss: !name:speechbrain.nnet.losses.mse_loss
 
@@ -106,6 +111,7 @@ checkpointer: !new:speechbrain.utils.checkpoints.Checkpointer
         hypermixer: !ref <hypermixer>
         scheduler: !ref <noam_annealing>
         counter: !ref <epoch_counter>
+        lin: !ref <lin>
 
 train_logger: !new:speechbrain.utils.train_logger.FileTrainLogger
     save_file: !ref <train_log>
