--- a/recipes/CommonVoice/self-supervised-learning/hypermixer/hparams/hypermixer.yaml
+++ b/recipes/CommonVoice/self-supervised-learning/hypermixer/hparams/hypermixer.yaml
@@ -38,7 +38,7 @@ mask_prob: 0.65
 freeze_wav2vec: False
 
 number_of_epochs: 100
-lr_adam: 0.0002 # This will get reduced by the training scheduler
+lr_adam: 1.0 # This will get reduced by the training scheduler
 weight_decay: 0.01
 d_model: 768  # Needed by the scheduler. 768 is for the BASE w2v2
 sorting: ascending
@@ -99,11 +99,16 @@ modules:
 
 MSE_loss: !name:speechbrain.nnet.losses.mse_loss
 
-opt_class: !name:torch.optim.AdamW
-    lr: 0 # Will be changed by the scheduler, but we start at 0!
-    betas: (0.9, 0.98)
-    eps: 0.000000001
-    weight_decay: !ref <weight_decay>
+opt_class: !name:torch.optim.Adadelta
+    lr: !ref <lr_adam>
+    rho: 0.95
+    eps: 1.e-8
+
+# opt_class: !name:torch.optim.AdamW
+#    lr: 0 # Will be changed by the scheduler, but we start at 0!
+#    betas: (0.9, 0.98)
+#    eps: 0.000000001
+#    weight_decay: !ref <weight_decay>
 
 noam_annealing: !new:speechbrain.nnet.schedulers.NoamScheduler
     lr_initial: !ref <lr_adam>
