--- a/recipes/CommonVoice/self-supervised-learning/hypermixer/hparams/hypermixer.yaml
+++ b/recipes/CommonVoice/self-supervised-learning/hypermixer/hparams/hypermixer.yaml
@@ -78,6 +78,23 @@ compute_features: !new:speechbrain.lobes.features.Fbank
 epoch_counter: !new:speechbrain.utils.epoch_loop.EpochCounter
     limit: !ref <number_of_epochs>
 
+conv_frontend: !new:speechbrain.lobes.models.convolution.ConvolutionFrontEnd
+    input_shape: [null, !ref <sample_rate>, 1]
+    num_blocks: 7
+    num_layers_per_block: 1
+    out_channels: [512, 512, 512, 512, 512, 512, 512]
+    kernel_size: [11, 3, 3, 3, 3, 3, 3]
+    strides: [5, 2, 2, 2, 2, 2, 2]
+    dropout: 0.0
+    dilations: [1, 1, 1, 1, 1, 1, 1]
+    residuals: [False, False, False, False, False, False, False]
+    conv_module: !name:speechbrain.nnet.CNN.Conv1d
+    activation: !name:torch.nn.GELU
+    norm: !name:speechbrain.nnet.normalization.LayerNorm
+    conv_bias: False
+    padding: valid
+    conv_init: kaiming
+
 hypermixer: !new:speechbrain.lobes.models.HyperMixer.HyperMixer
     input_size: 80
     hidden_size: 1024
@@ -96,6 +113,7 @@ modules:
     hypermixer: !ref <hypermixer>
     lin: !ref <lin>
     normalize: !ref <normalize>
+    conv_frontend: !ref <conv_frontend>
 
 MSE_loss: !name:speechbrain.nnet.losses.mse_loss
 
