--- a/recipes/CommonVoice/self-supervised-learning/hypermixer/hparams/hypermixer.yaml
+++ b/recipes/CommonVoice/self-supervised-learning/hypermixer/hparams/hypermixer.yaml
@@ -36,7 +36,7 @@ avoid_if_shorter_than: 1.0
 mask_length: 10
 mask_prob: 0.65
 freeze_wav2vec: False
-frontend: fastaudio
+frontend: wav2vec2
 frontend_size: 512
 kernel_sizes: [11, 3, 3, 3, 3, 3, 3]
 strides: [5, 2, 2, 2, 2, 2, 2]
