--- a/recipes/CommonVoice/ASR/CTC/hparams/train_it_with_crdnn.yaml
+++ b/recipes/CommonVoice/ASR/CTC/hparams/train_it_with_crdnn.yaml
@@ -35,6 +35,7 @@ lr: 1.0
 sorting: ascending
 auto_mix_prec: False
 ckpt_interval_minutes: 30 # save checkpoint every N min
+is_mixer: False
 
 # With data_parallel batch_size is split into N jobs
 # With DDP batch_size is multiplied by N jobs
